# udpnotify

./: .clang-format  meson.build
.github/workflows/: main.yml
data/icons/: meson.build
data/systemd/: fragoi-udpnotify.service  meson.build
src/: arguments.cpp  arguments.h  exceptions.cpp  exceptions.h  gexception.cpp  gexception.h  gobjectmm.h  logger.cpp  logger.h  main.cpp  notifications.cpp  notifications.h  parsenotify.cpp  parsenotify.h  protocol.h  udpserver.cpp  udpserver.h
test/: arguments_test.cpp  logger_test.cpp  parsenotify_test.cpp  protocol_test.cpp  udpserver_test.cpp
test/manual/: notifications_test.cpp  notify_test.cpp  udpserver_test.cpp
